@@ -1,4 +1,5 @@
-version = 1.0
+version = 1.1
 show_suppress_menu = False
+gl_multisample = True
 
 
