@@ -23,6 +23,7 @@ class AppearanceConfig(PrefComponent):
 
     def get_dialoglist(self):
         list1 = [["Suppress/Delete Menu in TreeViewer", self.setting["show_suppress_menu"], 3, {"text":"Show"}],
+["OpenGL multisampling", self.setting["gl_multisample"], 3, {"text":"On"}],
                 ]
         hint1  = ['Show Suppress, Unsuppress, and Delete Menu in Project Tree Viewer',
                  ]
@@ -31,6 +32,9 @@ class AppearanceConfig(PrefComponent):
 
     def set_dialog_result(self, value):
         self.setting["show_suppress_menu"]  = value[0]
+        self.setting["gl_multisample"]  = value[1]
+        import ifigure.matplotlib_mod.backend_wxagg_gl
+        ifigure.matplotlib_mod.backend_wxagg_gl.multisample_init_done = False
      
 
 
